Remove all non-migrated strings

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -13,7 +13,6 @@
   "nsfw": "محتوى حساس",
   "post": "منشور",
   "save": "حفظ",
-  "send_message": "أرسل الرسالة",
   "subscribed": "مُتابِعون",
   "all": "الكل",
   "replies": "الإجابات",
@@ -69,5 +68,6 @@
   "verify_password": "تأكيد الكلمة السرية",
   "old_password": "الكلمة السرية القديمة",
   "show_avatars": "إظهار الصور الرمزية",
-  "search": "البحث"
+  "search": "البحث",
+  "send_message": "أرسل الرسالة"
 }
