--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -13,7 +13,6 @@
   "nsfw": "Konsterna",
   "post": "Afiŝi",
   "save": "konservi",
-  "send_message": "Sendi mesaĝon",
   "subscribed": "Abonita",
   "local": "Loka",
   "all": "Ĉiam",
@@ -110,9 +109,9 @@
   "number_of_comments": "{count,plural, =1{{count} komento} other{{count} komentoj}}",
   "number_of_posts": "{count,plural, =1{{count} afiŝo} other{{count} afiŝoj}}",
   "number_of_subscribers": "{count,plural, =1{{count} abonanto} other{{count} abonantoj}}",
+  "number_of_users": "{count,plural, =1{{count} uzanto} other{{count} uzantoj}}",
   "unsubscribe": "Malaboni",
   "subscribe": "Aboni",
-  "number_of_users": "{count,plural, =1{{count} uzanto} other{{count} uzantoj}}",
   "messages": "Mesaĝoj",
   "banned_users": "Forbaritaj uzantoj",
   "delete_account_confirm": "Averto: ĉi tio por ĉiam forigos ĉiujn viajn datumojn. Enigu pasvorton por konfirmi.",
@@ -120,5 +119,6 @@
   "verify_password": "Konfirmu vian pasvorton",
   "old_password": "Malnova pasvorto",
   "show_avatars": "Montri profilbildojn",
-  "search": "Serĉi"
+  "search": "Serĉi",
+  "send_message": "Sendi mesaĝon"
 }
