--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -13,7 +13,6 @@
   "nsfw": "Para adultos",
   "post": "publicar",
   "save": "guardar",
-  "send_message": "Enviar mensaje",
   "subscribed": "Suscrito",
   "local": "Local",
   "all": "Todo",
@@ -110,9 +109,9 @@
   "number_of_comments": "{count,plural, =1{{count} Comentario} other{{count} Comentarios}}",
   "number_of_posts": "{count,plural, =1{{count} Publicación} other{{count} Publicaciones}}",
   "number_of_subscribers": "{count,plural, =1{{count} suscriptor} other{{count} suscriptores}}",
+  "number_of_users": "{count,plural, =1{{count} usuario} other{{count} usuarios}}",
   "unsubscribe": "Desuscribirse",
   "subscribe": "Suscribirse",
-  "number_of_users": "{count,plural, =1{{count} usuario} other{{count} usuarios}}",
   "messages": "Mensajes",
   "banned_users": "Usuarios expulsados",
   "delete_account_confirm": "Advertencia: esta acción eliminará permanentemente toda su información. Introduzca su contraseña para confirmar.",
@@ -120,5 +119,6 @@
   "verify_password": "Verificar contraseña",
   "old_password": "Antigua contraseña",
   "show_avatars": "Mostrar avatares",
-  "search": "Buscar"
+  "search": "Buscar",
+  "send_message": "Enviar mensaje"
 }
