--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -13,7 +13,6 @@
   "nsfw": "민감한 콘텐츠(후방주의, 성인)",
   "post": "등록",
   "save": "저장",
-  "send_message": "메세지 전송",
   "subscribed": "구독",
   "local": "Local",
   "all": "모두",
@@ -110,9 +109,9 @@
   "number_of_comments": "{count,plural, =1{덧글수 {count}}}",
   "number_of_posts": "{count,plural, =1{게시물 수 {count}}}",
   "number_of_subscribers": "{count,plural, =1{구독자수{count}}}",
+  "number_of_users": "{count,plural, =1{가입자수 {count}}}",
   "unsubscribe": "구독취소",
   "subscribe": "구독",
-  "number_of_users": "{count,plural, =1{가입자수 {count}}}",
   "messages": "메세지",
   "banned_users": "금지 된 사용자",
   "delete_account_confirm": "경고 : 모든 데이터가 영구적으로 삭제됩니다. 확인을 위해 비밀번호를 입력하십시오.",
@@ -120,5 +119,6 @@
   "verify_password": "비밀번호 재입력",
   "old_password": "기존 비밀번호",
   "show_avatars": "아바타 보기",
-  "search": "검색"
+  "search": "검색",
+  "send_message": "메세지 전송"
 }
