--- a/lib/l10n/untranslated.json
+++ b/lib/l10n/untranslated.json
@@ -1,17 +1,11 @@
 {
   "ar": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
     "from",
     "banner",
     "display_name",
     "bio",
+    "not_a_mod_or_admin",
     "couldnt_find_post",
     "invalid_url",
     "couldnt_like_comment",
@@ -52,48 +46,24 @@
     "couldnt_create_private_message",
     "no_private_message_edit_allowed",
     "post_title_too_long",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "delete_account_confirm"
   ],
 
   "ca": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
-    "bio",
-    "invalid_url",
-    "report_reason_required",
-    "report_too_long",
-    "couldnt_create_report",
-    "couldnt_resolve_report",
-    "invalid_post_title",
-    "not_a_moderator",
-    "invalid_password",
-    "captcha_incorrect",
-    "bio_length_overflow"
+    "not_a_mod_or_admin"
   ],
 
   "da": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ],
 
   "de": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
+    "not_a_mod_or_admin",
     "report_reason_required",
     "report_too_long",
     "couldnt_create_report",
@@ -101,58 +71,26 @@
   ],
 
   "el": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ],
 
   "eo": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ],
 
   "es": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ],
 
   "eu": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ],
 
   "fa": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "modlog",
     "community",
     "url",
     "body",
-    "send_message",
     "subscribed",
     "local",
     "from",
@@ -166,6 +104,7 @@
     "theme",
     "old",
     "by",
+    "not_a_mod_or_admin",
     "invalid_url",
     "couldnt_get_comments",
     "report_reason_required",
@@ -185,21 +124,21 @@
     "couldnt_update_private_message",
     "couldnt_create_private_message",
     "no_private_message_edit_allowed",
-    "post_title_too_long"
+    "post_title_too_long",
+    "number_of_subscribers",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "send_message"
   ],
 
   "fi": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
     "banner",
     "display_name",
     "bio",
+    "not_a_mod_or_admin",
     "invalid_url",
     "report_reason_required",
     "report_too_long",
@@ -214,39 +153,24 @@
   ],
 
   "fr": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
+    "not_a_mod_or_admin",
     "report_too_long"
   ],
 
   "ga": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
+    "not_a_mod_or_admin",
     "report_reason_required",
     "report_too_long",
     "couldnt_create_report",
     "couldnt_resolve_report",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users"
   ],
 
   "gl": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "settings",
     "password",
     "email_or_username",
@@ -260,7 +184,6 @@
     "nsfw",
     "post",
     "save",
-    "send_message",
     "subscribed",
     "local",
     "all",
@@ -301,6 +224,7 @@
     "chat",
     "admin",
     "by",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "couldnt_find_post",
     "not_logged_in",
@@ -353,17 +277,25 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "new_password",
+    "verify_password",
+    "old_password",
+    "show_avatars",
+    "search",
+    "send_message"
   ],
 
   "hi": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "password",
     "email_or_username",
     "modlog",
@@ -405,6 +337,7 @@
     "top",
     "chat",
     "by",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "not_logged_in",
     "site_ban",
@@ -452,17 +385,21 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "new_password",
+    "verify_password",
+    "old_password",
+    "search"
   ],
 
   "hr": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "settings",
     "password",
     "email_or_username",
@@ -476,7 +413,6 @@
     "nsfw",
     "post",
     "save",
-    "send_message",
     "subscribed",
     "local",
     "all",
@@ -517,6 +453,7 @@
     "chat",
     "admin",
     "by",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "couldnt_find_post",
     "not_logged_in",
@@ -569,21 +506,30 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "new_password",
+    "verify_password",
+    "old_password",
+    "show_avatars",
+    "search",
+    "send_message"
   ],
 
   "hu": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
     "banner",
     "display_name",
     "bio",
+    "not_a_mod_or_admin",
     "invalid_url",
     "report_reason_required",
     "report_too_long",
@@ -597,24 +543,12 @@
   ],
 
   "it": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ],
 
   "ja": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
+    "not_a_mod_or_admin",
     "invalid_url",
     "report_reason_required",
     "report_too_long",
@@ -625,21 +559,16 @@
     "not_a_moderator",
     "invalid_password",
     "captcha_incorrect",
-    "invalid_username"
+    "invalid_username",
+    "banned_users"
   ],
 
   "ka": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
     "banner",
     "display_name",
     "bio",
+    "not_a_mod_or_admin",
     "invalid_url",
     "report_reason_required",
     "report_too_long",
@@ -658,13 +587,6 @@
   ],
 
   "km": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "settings",
     "password",
     "email_or_username",
@@ -678,7 +600,6 @@
     "nsfw",
     "post",
     "save",
-    "send_message",
     "subscribed",
     "local",
     "all",
@@ -719,6 +640,7 @@
     "chat",
     "admin",
     "by",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "couldnt_find_post",
     "not_logged_in",
@@ -771,31 +693,34 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "new_password",
+    "verify_password",
+    "old_password",
+    "show_avatars",
+    "search",
+    "send_message"
   ],
 
   "ko": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ],
 
   "nl": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
     "banner",
     "display_name",
     "bio",
+    "not_a_mod_or_admin",
     "invalid_url",
     "report_reason_required",
     "report_too_long",
@@ -809,13 +734,6 @@
   ],
 
   "oc": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "settings",
     "password",
     "email_or_username",
@@ -829,7 +747,6 @@
     "nsfw",
     "post",
     "save",
-    "send_message",
     "subscribed",
     "local",
     "all",
@@ -870,6 +787,7 @@
     "chat",
     "admin",
     "by",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "couldnt_find_post",
     "not_logged_in",
@@ -922,26 +840,34 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "new_password",
+    "verify_password",
+    "old_password",
+    "show_avatars",
+    "search",
+    "send_message"
   ],
 
   "pl": [
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
-    "number_users_online"
+    "not_a_mod_or_admin",
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users"
   ],
 
   "pt": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "settings",
     "password",
     "email_or_username",
@@ -955,7 +881,6 @@
     "nsfw",
     "post",
     "save",
-    "send_message",
     "subscribed",
     "local",
     "all",
@@ -996,6 +921,7 @@
     "chat",
     "admin",
     "by",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "couldnt_find_post",
     "not_logged_in",
@@ -1048,17 +974,26 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "new_password",
+    "verify_password",
+    "old_password",
+    "show_avatars",
+    "search",
+    "send_message"
   ],
 
   "pt_BR": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
+    "not_a_mod_or_admin",
     "report_reason_required",
     "report_too_long",
     "couldnt_create_report",
@@ -1066,28 +1001,20 @@
   ],
 
   "ru": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
-    "number_users_online"
+    "not_a_mod_or_admin",
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users"
   ],
 
   "sq": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
     "banner",
     "display_name",
     "bio",
+    "not_a_mod_or_admin",
     "invalid_url",
     "report_reason_required",
     "report_too_long",
@@ -1101,13 +1028,6 @@
   ],
 
   "sr": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "settings",
     "password",
     "email_or_username",
@@ -1121,7 +1041,6 @@
     "nsfw",
     "post",
     "save",
-    "send_message",
     "subscribed",
     "local",
     "all",
@@ -1162,6 +1081,7 @@
     "chat",
     "admin",
     "by",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "couldnt_find_post",
     "not_logged_in",
@@ -1214,17 +1134,25 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "new_password",
+    "verify_password",
+    "old_password",
+    "show_avatars",
+    "search",
+    "send_message"
   ],
 
   "sr_Latn": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "settings",
     "email_or_username",
     "posts",
@@ -1233,7 +1161,6 @@
     "title",
     "post",
     "save",
-    "send_message",
     "subscribed",
     "local",
     "all",
@@ -1262,6 +1189,7 @@
     "old",
     "top",
     "admin",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "couldnt_find_post",
     "not_logged_in",
@@ -1312,27 +1240,26 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "show_avatars",
+    "search",
+    "send_message"
   ],
 
   "sv": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ],
 
   "th": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "settings",
     "password",
     "email_or_username",
@@ -1346,7 +1273,6 @@
     "nsfw",
     "post",
     "save",
-    "send_message",
     "subscribed",
     "local",
     "all",
@@ -1387,6 +1313,7 @@
     "chat",
     "admin",
     "by",
+    "not_a_mod_or_admin",
     "not_an_admin",
     "couldnt_find_post",
     "not_logged_in",
@@ -1439,21 +1366,30 @@
     "post_title_too_long",
     "email_already_exists",
     "user_already_exists",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users",
+    "unsubscribe",
+    "subscribe",
+    "messages",
+    "banned_users",
+    "delete_account_confirm",
+    "new_password",
+    "verify_password",
+    "old_password",
+    "show_avatars",
+    "search",
+    "send_message"
   ],
 
   "tr": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
     "banner",
     "display_name",
     "bio",
+    "not_a_mod_or_admin",
     "invalid_url",
     "report_reason_required",
     "report_too_long",
@@ -1467,17 +1403,11 @@
   ],
 
   "uk": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register",
     "local",
     "banner",
     "display_name",
     "bio",
+    "not_a_mod_or_admin",
     "invalid_url",
     "report_reason_required",
     "report_too_long",
@@ -1488,16 +1418,14 @@
     "invalid_password",
     "captcha_incorrect",
     "bio_length_overflow",
-    "number_users_online"
+    "number_users_online",
+    "number_of_comments",
+    "number_of_posts",
+    "number_of_subscribers",
+    "number_of_users"
   ],
 
   "zh": [
-    "add_account",
-    "select_instance",
-    "accounts",
-    "appearance",
-    "add_instance",
-    "sign_in",
-    "register"
+    "not_a_mod_or_admin"
   ]
 }
