--- a/lib/l10n/intl_ca.arb
+++ b/lib/l10n/intl_ca.arb
@@ -13,7 +13,6 @@
   "nsfw": "Per a adults",
   "post": "publicar",
   "save": "desa",
-  "send_message": "Envia el missatge",
   "subscribed": "Subscrit",
   "local": "Local",
   "all": "Tot",
@@ -34,6 +33,7 @@
   "avatar": "Avatar",
   "banner": "Capçalera",
   "display_name": "Nom a mostrar",
+  "bio": "Biografia",
   "email": "Correu electrònic",
   "matrix_user": "Usuari del Matrix",
   "sort_type": "Tipus d’ordenació",
@@ -59,6 +59,7 @@
   "site_ban": "Us han expulsat del lloc",
   "community_ban": "Us han expulsat d’aquesta comunitat.",
   "downvotes_disabled": "Vots negatius inhabilitats",
+  "invalid_url": "URL invàlida.",
   "locked": "blocat",
   "couldnt_create_comment": "No s’ha pogut crear el comentari.",
   "couldnt_like_comment": "No s’ha pogut donar «m’agrada» al comentari.",
@@ -66,6 +67,11 @@
   "no_comment_edit_allowed": "No teniu permisos per a editar el comentari.",
   "couldnt_save_comment": "No s’ha pogut desar el comentari.",
   "couldnt_get_comments": "No s’han pogut recuperar els comentaris.",
+  "report_reason_required": "Motiu de l'informe necessari.",
+  "report_too_long": "Informe massa llarg.",
+  "couldnt_create_report": "No s'ha pogut crear l'informe.",
+  "couldnt_resolve_report": "No s'ha pogut resoldre l'informe.",
+  "invalid_post_title": "Títol de la publicació invàlid",
   "couldnt_create_post": "No s’ha pogut crear l’apunt.",
   "couldnt_like_post": "No s’ha pogut donar «m’agrada» a l’apunt.",
   "couldnt_find_community": "No s’ha pogut trobar la comunitat.",
@@ -78,6 +84,7 @@
   "community_already_exists": "Aquesta comunitat ja existeix.",
   "community_moderator_already_exists": "Aquest moderador de la comunitat ja existeix.",
   "community_follower_already_exists": "Aquest seguidor de la comunitat ja existeix.",
+  "not_a_moderator": "No ets un moderador.",
   "couldnt_update_community": "No s’ha pogut actualitzar la comunitat.",
   "no_community_edit_allowed": "No teniu permisos per a editar la comunitat.",
   "system_err_login": "Error del sistema. Intenti tancar sessió i ingressar de nou.",
@@ -85,8 +92,11 @@
   "couldnt_find_that_username_or_email": "No s’ha pogut trobar aquest nom de usuari o adreça electrònica.",
   "password_incorrect": "Contrasenya incorrecta.",
   "registration_closed": "S’han tancat els registres",
+  "invalid_password": "Contrasenya no vàlida. La contrasenya ha de tenir <= 60 caràcters.",
   "passwords_dont_match": "Les contrasenyes no coincideixen.",
+  "captcha_incorrect": "Captcha incorrecte.",
   "invalid_username": "El nom d’usuari no és vàlid.",
+  "bio_length_overflow": "La biografia d'usuari no pot excedir els 300 caràcters.",
   "couldnt_update_user": "No s’ha pogut actualitzar l’usuari.",
   "couldnt_update_private_message": "No s’ha pogut actualitzar el missatge privat.",
   "couldnt_update_post": "No s’ha pogut actualitzar l’apunt",
@@ -96,23 +106,12 @@
   "email_already_exists": "L’adreça ja és en ús.",
   "user_already_exists": "L’usuari ja existeix.",
   "number_users_online": "{count,plural, =1{{count} usuari en línia} other{{count} usuaris en línia}}",
-  "bio": "Biografia",
-  "invalid_url": "URL invàlida.",
-  "report_reason_required": "Motiu de l'informe necessari.",
-  "report_too_long": "Informe massa llarg.",
-  "couldnt_create_report": "No s'ha pogut crear l'informe.",
-  "couldnt_resolve_report": "No s'ha pogut resoldre l'informe.",
-  "invalid_post_title": "Títol de la publicació invàlid",
-  "not_a_moderator": "No ets un moderador.",
-  "invalid_password": "Contrasenya no vàlida. La contrasenya ha de tenir <= 60 caràcters.",
-  "captcha_incorrect": "Captcha incorrecte.",
-  "bio_length_overflow": "La biografia d'usuari no pot excedir els 300 caràcters.",
   "number_of_comments": "{count,plural, =1{{count} comentari} other{{count} comentaris}}",
   "number_of_posts": "{count,plural, =1{{count} Publicació} other{{count} Publicacions}}",
   "number_of_subscribers": "{count,plural, =1{{count} subscriptor} other{{count} subscriptors}}",
+  "number_of_users": "{count,plural, =1{{count} usuari} other{{count} usuaris}}",
   "unsubscribe": "Dóna’t de baixa",
   "subscribe": "Subscriu-t’hi",
-  "number_of_users": "{count,plural, =1{{count} usuari} other{{count} usuaris}}",
   "messages": "Missatges",
   "banned_users": "Usuaris expulsats",
   "delete_account_confirm": "Atenció: aquesta acció suprimirà permanentment la vostra informació. Introduïu la vostra contrasenya per a confirmar.",
@@ -120,5 +119,6 @@
   "verify_password": "Verifica la contrasenya",
   "old_password": "Contrasenya antiga",
   "show_avatars": "Mostra els avatars",
-  "search": "Cerca"
+  "search": "Cerca",
+  "send_message": "Envia el missatge"
 }
