--- a/lib/l10n/intl_da.arb
+++ b/lib/l10n/intl_da.arb
@@ -13,7 +13,6 @@
   "nsfw": "NSFW",
   "post": "indlæg",
   "save": "gem",
-  "send_message": "Send Besked",
   "subscribed": "Abboneret",
   "local": "Lokal",
   "all": "Alle",
@@ -110,9 +109,9 @@
   "number_of_comments": "{count,plural, =1{{count} Kommentar} other{{count} Kommentarer}}",
   "number_of_posts": "{count,plural, =1{{count} Indlæg} other{{count} Indlæg}}",
   "number_of_subscribers": "{count,plural, =1{{count} Abonnent} other{{count} Abonnenter}}",
+  "number_of_users": "{count,plural, =1{{count} Bruger} other{{count} Brugere}}",
   "unsubscribe": "Afmeld abbonement",
   "subscribe": "Abboner",
-  "number_of_users": "{count,plural, =1{{count} Bruger} other{{count} Brugere}}",
   "messages": "Beskeder",
   "banned_users": "Udelukkede Brugere",
   "delete_account_confirm": "Advarsel: Dette vil slette alle dine data. Indtast adgangskode for at bekræfte.",
@@ -120,5 +119,6 @@
   "verify_password": "Check Kodeord",
   "old_password": "Tidligere Kodeord",
   "show_avatars": "Vis Avatarer",
-  "search": "Søg"
+  "search": "Søg",
+  "send_message": "Send Besked"
 }
