--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -13,7 +13,6 @@
   "nsfw": "Pas sûr pour le travail (NSFW)",
   "post": "publication",
   "save": "sauvegarder",
-  "send_message": "Envoyer le message",
   "subscribed": "Abonnés",
   "local": "Local",
   "all": "Tout",
@@ -109,9 +108,9 @@
   "number_of_comments": "{count,plural, =1{{count} Commentaire} other{{count} Commentaires}}",
   "number_of_posts": "{count,plural, =1{{count} Publication} other{{count} Publications}}",
   "number_of_subscribers": "{count,plural, =1{{count} Abonné} other{{count} Abonnés}}",
+  "number_of_users": "{count,plural, =1{{count} Utilisateur} other{{count} Utilisateurs}}",
   "unsubscribe": "Se désabonner",
   "subscribe": "S’abonner",
-  "number_of_users": "{count,plural, =1{{count} Utilisateur} other{{count} Utilisateurs}}",
   "messages": "Messages",
   "banned_users": "Utilisateurs interdits",
   "delete_account_confirm": "Avertissement : cette action supprimera toutes vos données de façons permanente ! Saisissez votre mot de passe pour confirmer.",
@@ -119,5 +118,6 @@
   "verify_password": "Vérifiez le mot de passe",
   "old_password": "Ancien mot de passe",
   "show_avatars": "Afficher les avatars",
-  "search": "Rechercher"
+  "search": "Rechercher",
+  "send_message": "Envoyer le message"
 }
