--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -5,7 +5,6 @@
   "comments": "टिप्पणी (कमेंट )",
   "community": "समुदाय",
   "post": "पोस्ट",
-  "send_message": "संदेश भेजें",
   "more": "और भी",
   "reply": "जवाब दें",
   "edit": "संपादित करें ( एडिट करें )",
@@ -20,5 +19,6 @@
   "community_already_exists": "यह समुदाय पहले स मौजूद है |",
   "number_of_comments": "{count,plural, =1{{{ count }} टिप्पणी (कमेंट )} other{{{ count }} टिप्पणियाँ (कोम्मेंट्स )}}",
   "number_of_posts": "{count,plural, =1{{count} पोस्ट} other{{count} पोस्ट्स}}",
-  "show_avatars": "अवतार दिखाएँ"
+  "show_avatars": "अवतार दिखाएँ",
+  "send_message": "संदेश भेजें"
 }
