--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -13,7 +13,6 @@
   "nsfw": "NSFW",
   "post": "პოსტი",
   "save": "დამახსოვრება",
-  "send_message": "მესეჯის გაგზავნა",
   "subscribed": "გამოწერილია",
   "all": "ყველა",
   "replies": "პასუხები",
@@ -91,9 +90,9 @@
   "number_of_comments": "{count,plural, =1{კომენტარი} other{კომანტარები}}",
   "number_of_posts": "{count,plural, =1{თარგმნა} other{თარგმნა}}",
   "number_of_subscribers": "{count,plural, =1{გამომწერი} other{გამომწერები}}",
+  "number_of_users": "{count,plural, =1{მომხმარებელი} other{მომხმარებლები}}",
   "unsubscribe": "გამოწერის გაუქმნება",
   "subscribe": "გამოწერა",
-  "number_of_users": "{count,plural, =1{მომხმარებელი} other{მომხმარებლები}}",
   "messages": "მესეჯები",
   "banned_users": "გაშავებული მომხმარებლები",
   "delete_account_confirm": "გაფთხილება: ეს შენს ყველაფერს წაშლის.  პაროლი ჩაწერეთ რომ დაადასტუროთ.",
@@ -101,5 +100,6 @@
   "verify_password": "პაროლის დადასტურება",
   "old_password": "ძველი პაროლი",
   "show_avatars": "ავატარები გამოჩენა",
-  "search": "ძებმა"
+  "search": "ძებმა",
+  "send_message": "მესეჯის გაგზავნა"
 }
